# GameArchitecture

./: CMakeLists.txt  README.md  slide.pptx
assets/: map.tmx  map1.tmx  map1_boss.tmx
assets/Maps/: map1.tmx  map1_boss.tmx
assets/audio/: bgm.mov
assets/maps/: map1.tmx  map1_boss.tmx
src/: DoorSpawn.cpp  DoorSpawn.h  Enemy.cpp  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  Game.cpp  Game.h  GameContext.h  Map.cpp  Map.h  Player.cpp  Player.h  goal.txt  main.cpp
src/components/: BulletComponent.h  BulletTagComponent.h  DoorComponent.h  DoorTagComponent.h  EnemyAIComponent.h  EnemyTagComponent.h  HealthComponent.h  InputComponent.h  ItemComponent.h  ItemTagComponent.h  PhysicsComponent.h  PlayerTagComponent.h  SpriteComponent.h  TransformComponent.h  WeaponComponent.h
src/ecs/: Component.h
src/engine/core/: Camera.h  Services.h
src/engine/ecs/: Component.h  Entity.h  Manager.h
src/engine/resources/: AssetManager.cpp  AssetManager.h
src/factories/: BulletFactory.cpp  BulletFactory.h  DoorFactory.cpp  DoorFactory.h  EnemyFactory.cpp  EnemyFactory.h  ItemFactory.cpp  ItemFactory.h  PlayerFactory.cpp  PlayerFactory.h
src/game/components/core/: AnimationComponent.h  HealthComponent.h  InputComponent.h  PhysicsComponent.h  SpriteComponent.h  TransformComponent.h
src/game/components/gameplay/: BulletComponent.h  DoorComponent.h  EnemyAIComponent.h  ItemComponent.h  WeaponComponent.h
src/game/components/identity/: BulletTagComponent.h  DoorTagComponent.h  EnemyTagComponent.h  ItemTagComponent.h  PlayerTagComponent.h
src/game/data/: AnimationClips.h  AssetPaths.h
src/game/factories/: BulletFactory.cpp  BulletFactory.h  DoorFactory.cpp  DoorFactory.h  EnemyFactory.cpp  EnemyFactory.h  ItemFactory.cpp  ItemFactory.h  PlayerFactory.cpp  PlayerFactory.h
src/game/map/data/: MapData.h
src/game/map/loading/: MapLoader.cpp  MapLoader.h
src/game/map/runtime/: Map.cpp  Map.h  StageManager.cpp  StageManager.h
src/game/scenes/: IScene.h  PlayScene.cpp  PlayScene.h
src/game/systems/audio/: AudioSystem.cpp  AudioSystem.h  BgmPlayer.h  BgmPlayer.mm
src/game/systems/combat/: CombatSystem.cpp  CombatSystem.h
src/game/systems/interaction/: DoorSystem.cpp  DoorSystem.h  ItemSystem.cpp  ItemSystem.h
src/game/systems/movement/: EnemyMovementLogic.cpp  EnemyMovementLogic.h  MovementSystem.cpp  MovementSystem.h
src/game/systems/physics/: CollisionSystem.cpp  CollisionSystem.h
src/game/systems/rendering/: AnimationSystem.cpp  AnimationSystem.h  RenderSystem.cpp  RenderSystem.h
src/map/: Map.cpp  Map.h  MapLoader.h  StageManager.cpp  StageManager.h
src/systems/: CombatSystem.cpp  CombatSystem.h  DoorSystem.cpp  DoorSystem.h  ItemSystem.cpp  ItemSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
